# Embodied-R1

./: .gitignore  README.md  download_train_data.py  inference_example.py  pyproject.toml  wandb_report_payload.json
.agent/: README.md  state.md
.agent/01_plans/: step1_planB_3d_spatial_reasoning.md
.agent/02_reports/: eval_scripts_fix_report.md
.agent/03_context/: eval_scripts_analysis.md  research.md  stage1_training_log_guide.md  training_scripts_analysis.md
EXMem/: __init__.py  global_task_memory.py  task_memory.py
developer-logs/context/: ids_module.md
developer-logs/reports/: cpu_memory_growth_analysis.md  eval_results_Embodied-R1-3B_20260423.md  eval_results_Embodied-R1-3B_20260429.md  ids_roborefit_eval_20260516.md  smoke_test_stage1_diagnosis_20260427.md  smoke_test_stage1_full_analysis_report.md
disambiguation/: __init__.py  mcp_state_tracker.py  r1_candidate_extractor.py  resolver.py
eval/: hf_inference_3d.py  hf_inference_roborefit.py  hf_inference_roborefit_degrade.py  hf_inference_sat.py  hf_inference_vabench_point.py  hf_inference_vabench_visual_trace.py  hf_inference_vabench_visual_trace_m_v2_1.py  run_all.sh
experiments/: build_ids_original_subset.py  evaluate_ids_behavior.py  evaluate_ids_synthetic_mcp.py  test_mcp_disambiguation.py  test_r1_disambiguation.py
logs/results/: failure_library.json  global_events.jsonl
