[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verl"
version = "0.2.0.dev"
description = "An Efficient, Scalable, Multi-Modality RL Training Framework based on veRL"
readme = "README.md"
license = {text = "Apache 2.0 License"}
requires-python = ">=3.11, <3.14"
authors = [
    {name = "verl", email = "zhangchi.usc1992@bytedance.com"},
]
dependencies = [
    "accelerate==1.13.0",
    "codetiming==1.4.0",
    "datasets==4.8.4",
    "flash-attn==2.8.3",
    "liger-kernel==0.7.0",
    "mathruler==0.1.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "pandas==3.0.2",
    "peft==0.19.1",
    "pillow==12.2.0",
    "pyarrow==24.0.0",
    "pylatexenc==2.10",
    "qwen-vl-utils==0.0.14",
    "ray[default]==2.40.0",
    "tensordict==0.12.2",
    "torchdata==0.11.0",
    "transformers==4.49.0",
    "vllm==0.7.3",
    "wandb==0.26.0",
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[project.urls]
Homepage = "https://github.com/volcengine/verl"

[tool.ruff]
target-version = "py39"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "W605", "C408"]
select = ["C", "E", "F", "I", "W", "RUF022"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["verl"]
known-third-party = ["torch", "transformers", "wandb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
